# goldstone-server

./: .codeclimate.yml  .coveragerc  .dockerignore  .excludetests  .gitignore  .gitmodules  .travis.yml  AUTHORS  CHANGELOG.md  ChangeLog  Dockerfile  Dockerfile-goldstone-app-dev  Dockerfile-goldstone-task-dev  Dockerfile-nginx  Gruntfile.js  HACKING.md  HACKING.rst  INSTALL.md  INSTALL.rst  MANIFEST.in  MANIFEST.in.enterprise  MANIFEST.in.oss  Makefile  README.md  README.rst  Vagrantfile  addon_fabfile.py  app_fabfile.py  bower.json  circle.yml  compose-containerapp-gse.yml  compose-containerapp-oss.yml  compose-localapp-gse.yml  compose-localapp-oss.yml  configure_stack.py  docker-compose-build.yml  docker-compose-dev.yml  docker-compose-ent-dev.yml  docker-compose-ent-local-dev.yml  docker-compose-local-dev.yml  (+27 more)
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
3RDPARTY_LICENSES/: JQuery-MIT-LICENSE.txt  South-License.txt  d3-legend-LICENSE.txt  dataTables-MIT-LICENSE.txt  postgresql-LICENSE.txt  pyflakes-LICENSE.txt  rabbitmq-LICENSE.txt  wsgref-LICENSE.txt
CLA/: Entity_CLA.html  Individual_CLA.html
ansible/: README.md
ansible/playbooks/: ansible_hosts  backup_rdo_config.yml  config_openstack.yml  revert_rdo_config.yml
ansible/scripts/: backup_rdo_config.sh  config_openstack.sh  revert_rdo_config.sh
api_docs/: index.html  readme.txt
client/: client-files-config.js
client/js/: goldstoneBasePageView.js  goldstoneRouter.js  utilizationCpuView.js
client/po_files/: en.json  ja.json
client/scss/: bootstrap-submenu-shim.scss  bootstrap_dark_override.scss  data-tables.scss  main.scss  popover-and-tip.scss  style.scss  styleDark.scss  styleLight.scss
design_docs/: README  event-design-phase1.md
doc/: Makefile
doc/source/: conf.py  deploying.rst  design.rst  index.rst  testing.rst
docker/: README.md  TODO.md  docker-compose-ci.yml  docker-compose-develop.yml  docker-compose-enterprise.yml  docker-compose.yml  prod-docker-compose.yml
docker/build-support/: app-e-entrypoint.sh  collect-static.sh
docker/config/: goldstone-build.env  goldstone-dev.env  goldstone-prod.env  goldstone-test.env
docker/goldstone-app/: Dockerfile  README.md  docker-entrypoint.sh
docker/goldstone-app-e/: Dockerfile  README.md  docker-entrypoint.sh
docker/goldstone-base/: Dockerfile  README.md  docker-entrypoint.sh
docker/goldstone-db/: init-goldstone-db.sh  startup-goldstone-db.sh
docker/goldstone-log/: Dockerfile
docker/goldstone-logtest/: goldstone.env  logstash-tester.sh  run_goldstone.sh
docker/goldstone-search/: Dockerfile
docker/goldstone-task/: Dockerfile  README.md  docker-entrypoint.sh
docker/goldstone-task-e/: Dockerfile  README.md  docker-entrypoint.sh
docker/goldstone-web/: Dockerfile
docs/: CHANGELOG.md  CODEBASE.md  CONTRIBUTING.md  HACKING.md  I18N.md  INSTALL.md  RELEASE_NOTES.md  codebase.md  mkdocs.yml
etc/: rdo-kilo-packstack-answers-dev.txt  rdo-liberty-packstack-answers-dev.txt  sample_es_data.json
goldstone/: .gitignore  __init__.py  celery.py  goldstone_model_template.json  initial_load.py  lru_cache.py  manage.py  models.py  settings.py  test_javascript.py  test_utils.py  tests.py  urls.py  utils.py  version.py  views.py  wsgi.py
goldstone/accounts/: __init__.py  admin.py  models.py  tests.py  urls.py  views.py
goldstone/addons/: __init__.py  admin.py  models.py  tests.py  urls.py  utils.py  views.py
goldstone/api_perf/: __init__.py  admin.py  models.py  serializers.py  tests.py  urls.py  views.py
goldstone/apps/: __init__.py
goldstone/cinder/: __init__.py  admin.py  models.py  tasks.py  tests.py  urls.py  utils.py  views.py
goldstone/client/: HACKING.rst
goldstone/core/: __init__.py  admin.py  models.py  new_models.py  pagination.py  resource.py  resources.py  serializers.py  tasks.py  tests.py  tests_alert_definition_view.py  tests_alert_search_view.py  tests_alert_view.py  tests_alert_views.py  tests_models.py  tests_producer_view.py  tests_resource_api.py  tests_resource_api_1.py  tests_resource_api_2.py  tests_resource_api_query_strings.py  tests_resource_types.py  tests_resource_types_1.py  tests_resource_types_2.py  tests_saved_search_view.py  tests_search_and_alert.py  tests_tasks.py  tests_topology_view.py  urls.py  utils.py  views.py
goldstone/drfes/: __init__.py  filters.py  models.py  new_model_tests.py  new_models.py  pagination.py  serializers.py  tests.py  views.py
goldstone/glance/: __init__.py  models.py  tasks.py  tests.py  urls.py  utils.py  views.py
goldstone/glogging/: __init__.py  admin.py  models.py  serializers.py  tests.py  urls.py  views.py
goldstone/goldstone/: settings.py  wsgi.py
goldstone/installable_apps/: __init__.py  admin.py  models.py  tests.py  urls.py  views.py
requirements/: base.txt  development.txt  production.txt  test.txt
rpm_packaging/: Dockerfile.rpm  Vagrantfile  after-install.sh  after-remove.sh  before-install.sh  before-remove.sh  goldstone-server  goldstone-server-el7.spec  goldstone-server-enterprise  goldstone-server-enterprise-el7.spec  post_install  pre_install
rpm_spec/: bintray-ken-rpm.repo  goldstone-ui.spec  upload-to-bintray.sh
test/: apiPerfCollectionTest.js  api_perf_time_mock_test.js  client-files.conf.js  include.conf.js  sample_event_data.json  tests.conf.js  toAddToUnitTests.js
test_data/: bulk_import_es.py  cockpit_data_result.pkl  comp_agg_result.json  comp_date_hist_result.json  comp_date_hist_result_filtered.json  comp_facet_result.json  err_and_warn_hists_result.json  err_and_warn_hists_result_day.json  err_and_warn_hists_result_hour.json  err_and_warn_hists_result_minute.json  generate_test_data.py  import_test_data.py  level_agg_result.json  level_facet_result.json  logging_nodes.1.json  logging_nodes.10.json  logging_nodes.2.json  logging_nodes.3.json  logging_nodes.4.json  logging_nodes.5.json  logging_nodes.6.json  logging_nodes.7.json  logging_nodes.8.json  logging_nodes.9.json  logging_sample_data.py  mapping.pkl  vagrant.rst
utils/: build_rpm  generate_nova_load.py  import_es_test_data  svg2rel
(+954 files in other folders)
