# Copyright 2014 Solinea, Inc.
#
# Licensed under the Solinea Software License Agreement (goldstone),
# Version 1.0 (the "License"); you may not use this file except in compliance
# with the License. You may obtain a copy of the License at:
#
#     http://www.solinea.com/goldstone/LICENSE.pdf
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# Author: Ken Pepple

[metadata]
name = goldstone
version = 0.9.6.6
summary = goldstone
license = Solinea Software License Agreement (version 1)
description-file = README.rst
author = Solinea, Inc.
author-email = goldstone@solinea.com
home-page = http://www.solinea.com/goldstone
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: OpenStack
    Framework :: Django
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Topic :: Internet :: WWW/HTTP

[files]
packages = goldstone
data_files =
    /opt/goldstone/external/rsyslog = external/rsyslog/rsyslog.conf
    /opt/goldstone/external/rsyslog/rsyslog.d/ = external/rsyslog/rsyslog.d/10-goldstone.conf
    /opt/goldstone/external/logstash/patterns = external/logstash/patterns/goldstone
    /opt/goldstone/external/logstash/conf.d/ = external/logstash/conf.d/*
    /opt/goldstone/ =
        install_goldstone.sh
        requirements.txt
        setup.cfg
        setup.py
        manage.py
        README.rst
        INSTALL.rst
        OSS_LICENSE_DISCLOSURE.pdf
        LICENSE.pdf

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[nosetests]
verbosity=2
detailed-errors=1

[bdist_rpm]
vendor = Solinea, Inc.
packager = goldstone@solinea.com
